# aioopenexchangerates

./: .codespellrc  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  labels.yml  poetry-upgrade.yml
docs/: conf.py  index.md  installation.md  usage.md
docs/source/: usage.md
src/aioopenexchangerates/: __init__.py  client.py
src/aioopenexchangerates/model/: response.py
tests/: conftest.py  test_client.py
tests/model/: conftest.py  test_latest.py
