[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=77.0.3" ]

[project]
name = "aioopenexchangerates"
version = "0.7.0"
description = "Fetch rates from openexchangerates with aiohttp."
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "Martin Hjelmare", email = "marhje52@gmail.com" },
]
requires-python = ">=3.13"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "aiohttp>=3.8.4",
  "mashumaro>=3.13.1",
]
urls."Bug Tracker" = "https://github.com/MartinHjelmare/aioopenexchangerates/issues"
urls.Changelog = "https://github.com/MartinHjelmare/aioopenexchangerates/blob/main/CHANGELOG.md"
urls.documentation = "https://aioopenexchangerates.readthedocs.io"
urls.repository = "https://github.com/MartinHjelmare/aioopenexchangerates"

[dependency-groups]
dev = [
  "aioresponses==0.7.8",
  "codespell==2.4.2",
  "copier==9.14.3",
  "mypy==1.20.2",
  "pre-commit==4.5.1",
  "pytest==9.0.3",
  "pytest-aiohttp==1.1.0",
  "pytest-cov==7.1.0",
  "python-semantic-release>=10,<11",
  "ruff==0.15.11",
  "sybil[pytest]==10.0.1",
  "ty==0.0.34",
  "yarl==1.23.0",
]
docs = [
  "furo; python_version>='3.12'",
  "myst-parser; python_version>='3.12'",
  "sphinx==9.*; python_version>='3.12'",
  "sphinx-autobuild; python_version>='3.12'",
]

[tool.ruff]
target-version = "py313"
line-length = 88
lint.select = [
  "ALL", # all rules
]
lint.ignore = [
  "ANN401",  # any-type
  "D203",    # 1 blank line required before class docstring
  "D213",    # Multi-line docstring summary should start at the second line
  "D417",    # False positives in some occasions
  "EM101",   # raw-string-in-exception
  "EM102",   # f-string-in-exception
  "PLR2004", # magic-value-comparison
  "TC001",   # typing-only-first-party-import
  "TC002",   # typing-only-third-party-import
  "TC003",   # typing-only-stdlib-import  #"TID252", # relative-imports
  "TRY003",  # raise-vanilla-args
]
lint.per-file-ignores."docs/conf.py" = [ "D100" ]
lint.per-file-ignores."setup.py" = [ "D100" ]
lint.per-file-ignores."tests/**/*" = [
  "PLR0913",
  "S101",
]
lint.isort.force-sort-within-sections = true
lint.isort.known-first-party = [ "aioopenexchangerates", "tests" ]

[tool.pyproject-fmt]
keep_full_version = true
max_supported_python = "3.14"

[tool.ty]
terminal.error-on-warning = true
src.exclude = [ "docs/" ]

[tool.pytest]
minversion = "9.0"
addopts = [
  "-Wonce",
  "-p no:doctest",
  "--cov=aioopenexchangerates",
  "--cov-report=term-missing",
  "--cov-report=xml",
]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
pythonpath = [ "src" ]

[tool.coverage]
run.branch = true
paths.source = [
  "src",
  ".tox/**/site-packages",
]
report.exclude_lines = [
  "@overload",
  "def __repr__",
  'if __name__ == "__main__":',
  "if TYPE_CHECKING",
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError",
  "raise RuntimeError",
]

[tool.semantic_release]
allow_zero_version = true
major_on_zero = false
version_toml = [ "pyproject.toml:project.version" ]
version_variables = [
  "src/aioopenexchangerates/__init__.py:__version__",
  "docs/conf.py:release",
]
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""
branches.main.match = "main"
branches.noop.match = "(?!main$)"
branches.noop.prerelease = true
changelog.exclude_commit_patterns = [
  "chore(?:\\([^)]*?\\))?: .+",
  "ci(?:\\([^)]*?\\))?: .+",
  "refactor(?:\\([^)]*?\\))?: .+",
  "style(?:\\([^)]*?\\))?: .+",
  "test(?:\\([^)]*?\\))?: .+",
  "build\\((?!deps\\): .+)",
  "Merged? .*",
  "Initial [Cc]ommit.*",         # codespell:ignore
]
changelog.environment.keep_trailing_newline = true
commit_parser_options.parse_squash_commits = false
